<resources>
    <string name="app_name">iTools</string>
    <string name="entry">enter</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="menu_search">search</string>
    <string name="menu_settings">setting</string>
    <string name="home">Home</string>
    <string name="tech">Tech</string>
    <string name="itools">iTools</string>
    <string name="device">Device</string>
    <string name="mine">Mine</string>
    <string name="exit">exit</string>
    <string name="night">night</string>
    <string name="back">Back</string>
    <string name="app_name_baidu">baidu</string>
    <string name="app_name_tencent">tencent</string>
    <string name="app_name_wdj">wandoujia</string>
    <string name="desk_name_baidu">baiduTools</string>
    <string name="home_page">Home</string>
    <string name="application">Application</string>
    <string name="file">File</string>
    <string name="settings">Settings</string>
    <string name="read">Read</string>
    <string name="explorer">Explorer</string>
    <string name="account">acount</string>
    <string name="password">password</string>
    <string name="cb_hide">remember</string>
    <string name="real_name">Name</string>
    <string name="alias_name">Alias</string>
    <string name="login">Login</string>
</resources>
