<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </android.support.v4.view.ViewPager>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/black"
          />
    <RadioGroup
        android:id="@+id/rg_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_height"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_tab_1"
            style="@style/onyx_nav_rb_style"
            android:text="@string/home"
            android:drawableTop="@drawable/home_selector"/>
        <RadioButton
            android:id="@+id/rb_tab_2"
            style="@style/onyx_nav_rb_style"
            android:text="@string/tech"
            android:drawableTop="@drawable/tech_selector"/>
        <RadioButton
            android:id="@+id/rb_tab_3"
            style="@style/onyx_nav_rb_style"
            android:text="@string/itools"
            android:drawableTop="@drawable/ic_discover"/>
        <RadioButton
            android:id="@+id/rb_tab_4"
            style="@style/onyx_nav_rb_style"
            android:text="@string/device"
            android:drawableTop="@drawable/device_selector"/>
        <RadioButton
            android:id="@+id/rb_tab_5"
            style="@style/onyx_nav_rb_style"
            android:text="@string/mine"
            android:drawableTop="@drawable/mine_selector"/>
    </RadioGroup>
</LinearLayout>